# python_seed_env

./: README.md  build_maxtext_dep_lock_files.sh  build_maxtext_lock_cli.py  build_seed_env.sh  constraints_gpu_only.txt  generate_seed_env_lock_files.py  jax_requirements_lock_3_10.patch  jax_smoke_test.py  lock_to_lower_bound_project.py  maxtext_requirements_lock_3_10.txt  maxtext_requirements_lock_3_11.txt  maxtext_requirements_lock_3_12.txt  prepare_jax_seed.py  prepare_jax_seed.sh  pyproject.toml  requirements.txt  requirements_lock_3_10.txt  test_build_maxtext_lock_cli.py  utils.py  utils.sh
maxtext/: build_maxtext_dep_lock_files.sh  build_maxtext_lock_cli.py  constraints_tpu_only.txt
tpu_seed/python_3_10/: maxtext_requirements_lock_3_10.txt
tpu_seed/python_3_11/: maxtext_requirements_lock_3_11.txt
tpu_seed/python_3_12/: maxtext_requirements_lock_3_12.txt
