[project]
name = "test_env_1"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "absl-py==2.1.0",
    "aqtp>=0.8.4",
    "array-record>=0.7.2",
    "attrs==23.2.0",
    "auditwheel==6.1.0",
    "build==1.2.1",
    "cloud-accelerator-diagnostics>=0.1.1",
    "cloud-tpu-diagnostics>=0.1.5",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "datasets>=3.6.0",
    "etils[epath,epy]==1.8.0",
    "execnet==2.1.1",
    "filelock==3.14.0",
    "flatbuffers==24.3.25",
    "flax>=0.10.6",
    "fonttools==4.51.0",
    "fsspec==2024.5.0",
    "gcsfs>=2024.5.0",
    "google-api-core>=2.25.0",
    "google-api-python-client>=2.172.0",
    "google-cloud-aiplatform==1.61.0",
    "google-cloud-monitoring>=2.27.1",
    "google-cloud-storage>=2.19.0",
    "google-jetstream",
    "grain[parquet]>=0.2.6",
    "huggingface-hub>=0.33.0",
    "hypothesis==6.102.4",
    "importlib-resources==6.4.0",
    "iniconfig==2.0.0",
    "jax>=0.4.30",
    "jax-cuda12-pjrt==0.6.1 ; sys_platform == 'linux'",
    "jax-cuda12-plugin[with-cuda]==0.6.1 ; sys_platform == 'linux'",
    "jaxlib>=0.4.30",
    "jaxtyping>=0.3.2",
    "jsonlines>=4.0.0",
    "kiwisolver==1.4.5",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.0",
    "mdurl==0.1.2",
    "ml-collections>=1.1.0",
    "ml-dtypes==0.5.1",
    "ml-goodput-measurement==0.0.10",
    "mlperf-logging",
    "mpmath==1.4.0a1",
    "numpy>=2.0.0",
    "numpy==2.0.0 ; python_full_version < '3.13'",
    "nvidia-cublas-cu12==12.8.3.14",
    "nvidia-cuda-cupti-cu12==12.8.57",
    "nvidia-cuda-nvcc-cu12==12.8.61",
    "nvidia-cuda-runtime-cu12==12.8.57",
    "nvidia-cudnn-cu12==9.8.0.87",
    "nvidia-cufft-cu12==11.3.3.41",
    "nvidia-cusolver-cu12==11.7.2.55",
    "nvidia-cusparse-cu12==12.5.7.53",
    "nvidia-nccl-cu12==2.25.1",
    "nvidia-nvjitlink-cu12==12.8.61",
    "nvidia-nvshmem-cu12==3.2.5 ; sys_platform == 'linux'",
    "omegaconf>=2.3.0",
    "opt-einsum==3.3.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.5.12",
    "packaging==24.0",
    "pathwaysutils==0.1.1",
    "pillow>=11.1.0",
    "pluggy==1.5.0",
    "portpicker==1.6.0 ; python_full_version < '3.13'",
    "pre-commit>=4.2.0",
    "protobuf>=4.25.8",
    "psutil==5.9.8",
    "pyelftools==0.31",
    "pygments==2.18.0",
    "pyink>=24.10.1",
    "pylint>=3.3.7",
    "pyparsing==3.1.2",
    "pyproject-hooks==1.1.0",
    "pytest==8.2.0",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "pytype>=2024.10.11",
    "rich==13.7.1",
    "scipy==1.13.1 ; python_full_version < '3.13'",
    "sentencepiece>=0.1.97",
    "setuptools==76.0.0",
    "six==1.16.0",
    "sortedcontainers==2.4.0",
    "tensorboard-plugin-profile>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "tensorflow>=2.13.0",
    "tensorflow-datasets>=4.9.5",
    "tensorflow-text>=2.13.0",
    "tensorstore==0.1.73",
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
    "typing-extensions==4.12.0rc1",
    "wheel==0.43.0",
    "zipp==3.18.2",
    "zstandard==0.22.0",
]

[tool.uv.sources]
mlperf-logging = { git = "https://github.com/mlperf/logging.git", rev = "44b4810e65e8c0a7d9e4e207c60e51d9458a3fb8" }
google-jetstream = { git = "https://github.com/AI-Hypercomputer/JetStream.git", rev = "261f25007e4d12bb57cf8d5d61e291ba8f18430f" }




